Initial finished webpage
+teams.html
- removed leagues references
| updated links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="I'll edit this description later xD">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300|Roboto:300" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -28,13 +28,13 @@
               <h1 class="logoText">Matrix</h1>
             </li>
             <li class="nav-item centerImageOrText hiddenOnMobile displayNone">
-              <a class="headerLinks" href="https://discord.gg/matrix">Discord</a>
+              <a class="headerLinks" target="_blank" href="https://discord.gg/matrix">Discord</a>
             </li>
             <li class="nav-item centerImageOrText hiddenOnMobile displayNone">
-              <a class="headerLinks" href="#">Streamers</a>
+              <a class="headerLinks" href="streamer.html">Streamers</a>
             </li>
             <li class="nav-item centerImageOrText hiddenOnMobile displayNone">
-              <a class="headerLinks" href="#">Teams</a>
+              <a class="headerLinks" href="teams.html">Teams</a>
             </li>
             <li class="nav-item centerImageOrText hiddenOnMobile displayNone">
               <a class="headerLinks" href="#">Leagues</a>
@@ -81,7 +81,7 @@
               <h1>Our accelerator program aims to grow streamers into the next digital celebrities.</h1>
               <p>We provide streamers with monetary investments and mentors. In return, we take an Income Share Agreement. Through this model, we only profit if the streamer grows.</p>
               <br />
-              <a href="https://matrixleague.typeform.com/to/W6My9V" target="_blank" class="buttonStyle">Apply</a>
+              <a href="streamer.html" target="_blank" class="buttonStyle">Learn More</a>
             </div> <!--title-->
           </div> <!--streamer-->
           <div id="seeTeams" style="display:none;" class="col-md-4 titleContainer isSection centerOnMobile">
@@ -89,7 +89,7 @@
               <h1>Learn About Our Teams</h1>
               <p>Our co-op system gives our players more power and rights while allowing us to crowdsource better decisions.</p>
               <br />
-              <a href="#" class="buttonStyle">Teams</a>
+              <a href="teams.html" class="buttonStyle">Teams</a>
             </div> <!--title-->
           </div> <!-- seeTeams-->
           <div id="seeLeagues" style="display:none;" class="col-md-4 titleContainer isSection centerOnMobile">
