Name change for team members

--- a/teams.html
+++ b/teams.html
@@ -69,7 +69,7 @@
         <div class="teamsContainer">
           <div id="pubgmHeader" class="row teamsHeader pointerCursor">
             <div class="col-md-12 pointerCursor">
-              <label class="section-title"><h1 class="pointerCursor">PlayerUnknown's Battlegrounds Mobile</h1></label>
+              <label class="section-title"><h1 class="pointerCursor">PlayerUnknown's Battlegrounds: Mobile</h1></label>
             </div>
           </div> <!--teamsHeader-->
           <div id="pubgmContent" class="height100">
@@ -110,7 +110,7 @@
                       <span>START</span>
                     </div> <!--playerRole-->
                     <div class="playerName col-md-8">
-                      <span>RK Cows</span>
+                      <span>Cows</span>
                     </div> <!--playerName-->
                   </div>
                   <div class="playerPictureContainer" style="background-image: url('img/playerPictures/Cows.jpg')"></div> <!--playerPicture-->
@@ -124,7 +124,7 @@
                       <span>START</span>
                     </div> <!--playerRole-->
                     <div class="playerName col-md-8">
-                      <span>RK Dr4wt</span>
+                      <span>Dr4wt</span>
                     </div> <!--playerName-->
                   </div>
                   <div class="playerPictureContainer" style="background-image: url('img/playerPictures/Dr4wt.jpg')"></div> <!--playerPicture-->
