--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
 
   <title>Matrix</title>
-  <meta name="description" content="I'll edit this description later xD">
+  <meta name="description" content="Matrix-A Democratic Esports Team">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="css/styles.css">
